assets/style.css
/* This is used by weasyprint */
@page {
  margin: 12mm 15mm;
}

:root {
  font-family: Arial;
  font-size: 10.5pt;
}

body {
  margin: 0;
  padding: 0;
}

/* Remove unnecessary spacing at the end that sometimes causes an empty page to be generated. */
body > :last-child {
  margin-bottom: 0;
  padding-bottom: 0;
}

code {
  background-color: #eee;
  border-radius: 3px;
  font-family: courier, monospace;
  padding: 0 3px;
}

img {
  max-width: 100%;
}

li {
  padding: 5px 0;
}

/* Make multiline tables look good (https://github.com/wkhtmltopdf/wkhtmltopdf/issues/3356#issuecomment-288837439). */

table {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  border-collapse: collapse;
  page-break-inside: avoid;
  font-size: 0.9em;
}

tr {
  page-break-inside: avoid;
  page-break-after: auto;
}

th {
  font-weight: bold;
}

th,
td {
  padding: 5px 10px;
  border: 1px solid black;
  vertical-align: top;
}

ul > li::marker {
  font-size: 20px;
  background-color: red;
}

.version {
  color: gray;
}

.page-break-before {
  page-break-before: always;
}

.page-break-after {
  page-break-after: always;
}

.centered {
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.text-left {
  text-align: left;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.indent {
  text-indent: 3em;
}

div.spacer {
  height: 140px;
}

.bordered-image {
  padding: 5px;
  margin: 0 auto;
  display: block;
  border: 2px solid black;
  box-sizing: border-box;
}

